--- a/Ex05.ReverseTicTacToeLogic/Ex05.ReverseTicTacToeLogic.csproj
+++ b/Ex05.ReverseTicTacToeLogic/Ex05.ReverseTicTacToeLogic.csproj
@@ -40,16 +40,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Infrastructure\eMoveInputValidationStatus.cs" />
     <Compile Include="Infrastructure\GameEngine.cs" />
-    <Compile Include="Infrastructure\MoveValidator.cs" />
     <Compile Include="Infrastructure\PlayersTurnsManager.cs" />
     <Compile Include="Models\Board.cs" />
     <Compile Include="Models\Cell.cs" />
     <Compile Include="Models\Coords.cs" />
     <Compile Include="Models\eCellMarker.cs" />
     <Compile Include="Models\eGameStatuses.cs" />
-    <Compile Include="Models\eMoveExecutionResult.cs" />
+    <Compile Include="Models\eMoveResult.cs" />
     <Compile Include="Models\ePlayerType.cs" />
     <Compile Include="Models\Player.cs" />
   </ItemGroup>
